<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/group"
    tools:context="com.example.prathameshrege.swatch52.SignUp">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:contentDescription="@android:string/untitled"
        app:srcCompat="@drawable/rectangle2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Name"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="27dp"
        android:text="@string/Name"
        android:textColor="@android:color/holo_red_dark" />

    <EditText
        android:id="@+id/Phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Cpassword"
        android:layout_below="@+id/textView9"
        android:ems="10"
        android:inputType="phone"
        android:labelFor="@id/Phone" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:labelFor="@id/Email" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView9"
        android:layout_below="@+id/Password"
        android:text="@string/Cpassword"
        android:textColor="@android:color/holo_red_dark"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="323dp" />

    <EditText
        android:id="@+id/Cpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Password"
        android:layout_below="@+id/textView8"
        android:ems="10"
        android:inputType="textPassword"
        android:labelFor="@id/Cpassword" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/Name" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/Name"
        android:text="@string/Email"
        android:textColor="@android:color/holo_red_dark" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:labelFor="@id/Password" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Signupbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:onClick="Signin"
        android:text="@string/IAHA"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/SignUp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView9"
        android:layout_below="@+id/Email"
        android:text="@string/Password"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Cpassword"
        android:layout_below="@+id/Cpassword"
        android:text="@string/Phone_no"
        android:textColor="@android:color/holo_red_dark" />

    <Button
        android:id="@+id/Signupbtn"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_below="@+id/Phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:background="@drawable/rounded_edittext"
        android:onClick="Register"
        android:text="@string/SignUp" />


</RelativeLayout>
